--- a/src/app/_main/components/chat/chat.component.scss
+++ b/src/app/_main/components/chat/chat.component.scss
@@ -28,45 +28,59 @@ $inbox-header-footer: 15%;
             border-right: $border-type-1;
             box-shadow: $shadow-1;
             &-branding {
-                height: $inbox-header-height;
                 padding: $layout-padding;
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
                 h4 {
-                    margin: 20px $elm-margin;
+                }
+                .actions {
+                    display: flex;
+                    flex-direction: row;
+                    i {
+                        margin: 0 $elm-margin-s;
+                    }
                 }
             }
             &-actions {
+                padding: $layout-padding;
+                margin-bottom: $elm-margin;
                 i {
-                    margin: 0 $elm-margin;
+                    margin: 0 $elm-margin-s;
                 }
             }
             &-list {
                 li {
+                    padding: $layout-padding;
                     display: flex;
                     flex-direction: row;
-                    padding: $layout-padding;
+                    justify-content: space-between;
                     cursor: pointer;
                     &:hover {
                         background-color: $color-brand-tone4;
                     }
-                    img {
-                        width: $icon-container-width;
-                        height: $icon-container-height;
-                        border-radius: $icon-container-border-radius;
-                        border: $icon-container-border;
-                        margin: auto $elm-margin;
-                    }
-                    .text {
+                    .profile {
                         display: flex;
-                        flex-direction: column;
-                        justify-content: center;
-                        .name {
-
+                        img {
+                            width: $icon-container-width;
+                            height: $icon-container-height;
+                            border-radius: $icon-container-border-radius;
+                            border: $icon-container-border;
+                            margin: auto $elm-margin;
                         }
-                        .last-message {
-
-                        }
-                        .last-seen {
-
+                        .text {
+                            display: flex;
+                            flex-direction: column;
+                            justify-content: center;
+                            .name {
+    
+                            }
+                            .last-message {
+    
+                            }
+                            .last-seen {
+    
+                            }
                         }
                     }
                 }
@@ -107,7 +121,7 @@ $inbox-header-footer: 15%;
                     align-items: center;
                     margin: 0 $elm-margin;
                     i {
-                        margin: 0 2px;
+                        margin: 0 $elm-margin-s;
                     }
                     
                 }
@@ -115,7 +129,7 @@ $inbox-header-footer: 15%;
             &-body {
                 height: $inbox-header-body;
                 $shadow-1: 1px 1px 10px -1px rgba(0, 0, 0, 0.1);
-                background-color: $color-brand-tone5;
+                background-color: $color-brand-tone4;
             }
             &-footer {
                 height: $inbox-header-footer;
@@ -136,9 +150,8 @@ $inbox-header-footer: 15%;
                     display: flex;
                     align-items: center;
                     width: 30%;
-                    margin: 0 20px;
                     i {
-                        margin: 0 5px;
+                        margin: 0 $elm-margin-s;
                     }
                     a {
                         margin: 0 $elm-margin;
