--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -10,6 +10,7 @@
         width: $sidebar-widthless;
         .window {
             margin-top: $window-margin-top;
+            margin-bottom: $window-margin-bottom;
             padding: $window-padding;
             &-container {
                 width: $window-container-width;
