--- a/src/assets/styles/core.scss
+++ b/src/assets/styles/core.scss
@@ -72,184 +72,78 @@ GRIDS
 }
 
 .flex-row {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  flex-wrap: wrap;
-  &.center {
-    align-items: center;
-  }
-  .item-half {
-    width: 50%;
-  }
-  .item-tri {
-    width: 30%;
-  }
-  .item-quad {
-    width: 25%;
-  }
-}
-.flex-column {
-  display: flex;
-  flex-direction: column;
-  &.center {
-    align-items: center;
-  }
-}
-
-.layout {
-  &-full {
-    width: 100%;
-  }
-  &-half {
-    width: 50%;
-  }
-  &-full, &-half {
-    display: flex;
-    &.row {
-      flex-direction: row;
-    }
-    &.row-reverse {
-      flex-direction: row-reverse;
-    }
-    &.column {
-      flex-direction: column;
-    }
-    &.column-reverse {
-      flex-direction: column-reverse
-    }
-    .layout-item-full, .layout-item-half, .layout-item-flow {
-    }
-    .layout-item-full {
-      width: 100%;
-    }
-    .layout-item-half {
-      width: 50%;
-    }
-    .layout-item-flow {
-      margin-right: 20px;
-      &:last-child {
-        margin-right: 0;
-      }
-    }
-    @media only screen and (max-width: 600px) {
-      width: 100%;
-      flex-direction: column;
-      .layout-item-half {
-        width: 100%;
-      }
-    }
-  }
-}
-
-.grid {
-  &-full {
-    width: 100%;
-  }
-  &-half {
-    width: 50%;
-  }
-  &-half, &-full {
-    display: flex;
-    .verticalcenter {
-      align-items: center;
-    }
-    .col-25 {
-      width: 25%;
-    }
-    .col-50 {
-      width: 50%;
-    }
-    .col-33 {
-      width: 33%;
-    }
-    .col-75 {
-      width: 75%;
-    }
-    .col-100 {
-      width: 100%;
-    }
-    @media only screen and (max-width: 600px) {
-      width: 100%;
-      flex-direction: column;
-      .col-25, .col-30, .col-50, .col-75, .col-100 {
-        width: 100%;
-      }
-    }
-  }
-}
-
-.grid-center {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.row {
-  &-full, &-half {
+  &-start, &-center, &-spaced {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     align-items: center;
-    margin-bottom: 20px;
-    .row-item-full {
-      width: 100%;
-    }
-    .row-item-flow {
-      margin-right: 20px;
-      &:last-child {
-        margin-right: 0;
-      }
-    }
-    .row-item-50 {
-      width: 50%;
-      &.padded {
-       padding: 5px 10px;
-       &:first-child {
-         padding-left: 0px;
-       }
-      }
-    }
   }
-  &-half {
-    width: 50%;
+  &-start {
+    justify-content: start;
   }
-  &-reverse {
-    flex-direction: row-reverse
+  &-center {
+    justify-content: center;
+  }
+  &-spaced {
+    justify-content: space-between;
   }
 }
-.column {
-  &-full, &-half {
+
+.flex-column { 
+  &-start {
+    align-items: flex-start;
+  }
+  &-end {
+    align-items: flex-end;
+  }
+  &-center {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    margin-bottom: 20px;
-    .column-item, .column-item-50 {
-      margin-bottom: 20px;
-      &:last-child {
-        margin-bottom: 0;
-      }
-      &.margined {
-        margin-bottom: 20px;
-      }
-      &.padded {
-       padding: 5px 10px;
-       &:first-child {
-         padding-left: 0px;
-       }
-      }
-    }
-    .column-item-default {
+    align-items: center;
+  }
+}
 
+.flex-grid {
+  &-half, &-tri, &-quad, &-pent, &-hex {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    .grid-item {
+      .grid-content {
+        margin: $elm-margin;
+      }
     }
-    .column-item-50 {
-      width: 50%;
+    &.flex-layout-center {
+      justify-content: center;
+    }
+    &.flex-layout-spaced {
+      justify-content: space-between;
     }
   }
   &-half {
-    width: 50%;
+    .grid-item {
+      width: 50%;
+    }
   }
-  &-reverse {
-    flex-direction: column-reverse
+  &-tri {
+    .grid-item {
+      width: 33%;
+    }
+  }
+  &-quad {
+    .grid-item {
+      width: 25%;
+    }
+  }
+  &-pent {
+    .grid-item {
+      width: 20%;
+    }
+  }
+  &-hex {
+    .grid-item {
+      width: 16.6%;
+    }
   }
 }
 
@@ -312,7 +206,8 @@ html {
   }
 
   .title {
-
+    font-size: $font-size-m;
+    font-weight: $font-weight-bold;
   }
   .subtitle {
 
@@ -459,7 +354,6 @@ BUTTONS
   white-space: nowrap;
   vertical-align: top;
   outline: 0;
-  margin-bottom: $button-margin-bottom;
   padding: $button-padding;
   border-radius: $button-border-radius;
   box-shadow: $button-shadow;
@@ -518,6 +412,8 @@ BUTTONS
   font-weight: 600;
   &:hover {
     opacity: 1;
+    background: $color-brand;
+    color: #FFF;
   }
 }
 .btn-solid-white{
@@ -669,6 +565,24 @@ BUTTONS
 
 /*
 =========================
+LABEL
+=========================
+*/
+.cls-label {
+  padding: $label-padding-vertical $label-padding-horizontal;
+  border-radius: $label-border-radius;
+  background-color: $label-bg-color;
+  color: $lable-text-color;
+  &.touchable {
+    cursor: pointer;
+    &:hover {
+
+    }
+  }
+}
+
+/*
+=========================
 ICON
 =========================
 */
@@ -679,12 +593,17 @@ ICON
   width: $icon-container-width;
   height: $icon-container-height;
   border-radius: $icon-container-border-radius;
+  box-shadow: $icon-container-shadow;
   cursor: pointer;
-  &.cls-icon-brand {
-    background-color: $color-brand-tone4;
+  svg {
+   height: 65%;
+   width: 65%;  
   }
-  &.cls-icon-grey {
-    background-color: $color-brand-tone5;
+  &:hover {
+    background-color: $icon-container-hover-color;
+    svg {
+      fill: $color-brand;
+    } 
   }
   &.size-s {
     width: $icon-container-width-s;
@@ -694,13 +613,20 @@ ICON
     width: $icon-container-width-l;
     height: $icon-container-height-l;
   }
+}
+
+.cls-icon-brand {
+  background-color: $color-brand-tone4;
   &:hover {
-    background-color: $icon-container-color;
+    background-color: $icon-container-hover-color;
+    svg {
+      fill: #FFF;
+    }
   }
-  svg {
-    height: 65%;
-    width: 65%;
-  }
+}
+
+.cls-icon-grey {
+  background-color: $color-brand-tone5;
 }
 
 /*
@@ -778,49 +704,55 @@ ALERT
 INPUTS
 =========================
 */
-.input, .input-outline-white, .input-solid-white, .input-solid-grey {
+
+.cls-input, .cls-input-search, .cls-input-textarea {
+  &.input-outline-white {
+    background: transparent;
+    border: 1px solid #efefef;
+    color: #333;
+  }
+  
+  &.input-solid-white {
+    border: 1px solid #efefef;
+    background: #fff;
+    color: #333;
+  }
+  &.input-solid-grey {
+    border: 1px solid #efefef;
+    background: #fbfbfb;
+    color: #333;
+  }
+}
+
+.cls-input, .cls-input-textarea {
   margin-bottom: $input-margin-bottom;
   border-radius: $input-border-radius;
-  width: $input-width;
+  width: -webkit-fill-available;
   color: $input-text-color;
-  box-shadow: $input-shadow;
   border: $input-border;
+  background-color: $input-bg-color;
+  padding: $input-padding-l;
+  &.shadow {
+    box-shadow: $input-shadow;
+  }
   &:focus {
     outline:none;
   }
   &::placeholder {
     color: $color-p-light;
   }
-  &.size-s {
+  &.size-m {
     padding: 15px;
     font-size: 15px;
   }
-  &.size-m {
+  &.size-l {
     padding: 18px;
     font-size: 18px;
   }
 }
 
-.input-outline-white {
-  background: transparent;
-  border: 1px solid #efefef;
-  color: #333;
-}
-
-.input-solid-white {
-  border: 1px solid #efefef;
-  background: #fff;
-  color: #333;
-}
-.input-solid-grey {
-  border: 1px solid #efefef;
-  background: #fbfbfb;
-  color: #333;
-}
-
-.label-type-1{
-  font-size: 12px;
-  margin-bottom: 10px;
+.cls-input-textarea {
+  height: 50px;
 }
 
 .cls-input-search {
@@ -836,7 +768,6 @@ INPUTS
     input {
         width: 90%;;
         height: $input-height;
-        padding: $input-padding;
         border: 0px;
         outline: #ccc;
         background-color: $input-bg-color;
@@ -1032,13 +963,6 @@ INPUTS
   }
 }
 
-.cls-input-textarea {
-  width: 100%;
-  height: 200px;
-}
-
-.form {
-}
 /*
 =========================
 LOADER
@@ -1242,7 +1166,6 @@ CARDS
   }
   &-header {
     width: auto;
-    border-bottom: 1px solid #ebebeb;
     h5 {
       margin: 0;
       color: #555;
@@ -1327,10 +1250,12 @@ CARDS
           text-align: center;
       }
       .actions {
-          justify-content: center;
-          align-items: center;
-          display: flex;
-          flex-direction: column;
+        a:first-child {
+          margin-right: $elm-margin;
+        }
+        a:last-child {
+          margin-left: $elm-margin;
+        }
       }
   }
   &-nova {
@@ -1343,6 +1268,10 @@ CARDS
       width: 35%;
       min-height: 100px;
       background-color: $thumbnail-bg-color;
+      img {
+        width: 100%;
+        height: 100%;
+      }
     }
     .body {
       width: 65%;
